sandbox/output
StringCalculator.java:15: error: unreachable statement
        return 6 * 9;
        ^
1 error
